2011-09-08
* Added -rollAgainstTaretNumber to SWDice.
* Changed params to -rollWithMod:againstTargetNumber: to be NSInteger and
  NSUInteger, respectively.
* Added -dieString to SWDice class, which returns the die/dice represented
  by an instance in xdx[+/-x] format.
* Added -tallyAsString to SWRollResult class, which returns the roll tally
  as a string, joined by commas.
* Added this change log file! :D