@@ -1,4 +1,9 @@
+2011-09-09
+* Changed SWDice -dieString to -asString.
+
 2011-09-08
+* Cleaned up the code to conform to the "standard" style guides, as well
+  as commented the code finally.
 * Added -rollAgainstTaretNumber to SWDice.
 * Changed params to -rollWithMod:againstTargetNumber: to be NSInteger and
   NSUInteger, respectively.
